# Netra

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  run.py
.github/: CODEOWNERS  FUNDING.yml  labeler.yml
.github/workflows/: helm-test.yml  issue-greeter.yml  permission_guard.yml  pr-bot.yml  pr-greeter.yml  pr-review-check.yml  stale.yml  triage.yml  welcome.yml
deploy/v2/: docker-compose.yml  install_deps.sh  setup_v2.sh  start_cluster.sh  start_docker.sh  verify_connectivity.py
netra/: api.Dockerfile  worker.Dockerfile
netra/api/: Dockerfile  main.py
netra/core/: Dockerfile
netra/core/analysis/: ruby_bridge.py
netra/core/discovery/: dns_resolver.py
netra/core/ingestion/: worker.py
netra/core/orchestration/: messaging.py
netra/static/: index.html
netra/ui/: .dockerignore  Dockerfile  index.html  package.json  tailwind.config.js  vite.config.js
netra/ui/src/: App.jsx
netra/ui/src/components/: ActivityFeed.jsx  ActivityFeed.tsx  Header.jsx  Sidebar.jsx
netra/ui/src/views/: Assets.jsx  Assets.tsx  Dashboard.jsx  Dashboard.tsx  GraphView.tsx  Settings.tsx
netra/workers/: ingest.py  ml_analysis.py
tests/: test_core.py  test_qa.py  test_scanners.py
vortex/: main.py
vortex/api/: main.py
vortex/api/routes/: scan.py
vortex/api/static/: app.js  style.css
vortex/api/templates/: index.html
vortex/core/: database.py  engine.py  http.py  reporter.py  scanner.py
vortex/core/modules/: cloud.py  graphql.py  http.py  iot.py  network.py  pentest.py  ruby_bridge.py
vortex/integrations/: defectdojo.py
vortex/scans/ruby/: banner_grabber.rb  cve_example.rb  dos_check.rb  rce_scan.rb  robots_analyzer.rb
vortex/ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
vortex/ui/src/: App.jsx
